Archive2/03/5a400528a42063/output
main.cpp:7:1: error: static assertion failed: Jabberwocky is killing user.
 static_assert(is_same<int const&,int_ref const&&>(), "Jabberwocky is killing user.");
 ^
